# saba_first_api_onlinestore

./: README.md  pyproject.toml
onlinestore/onlinestore/: asgi.py  settings.py  urls.py  wsgi.py
onlinestore/products/: admin.py  models.py  urls.py  views.py
onlinestore/products/migrations/: 0001_initial.py  0002_product.py
onlinestore/products/templates/products/: manufacturer_detail.html  manufacturer_list.html
onlinestore/products/tests/: test_admin.py  test_models.py  test_views.py
