[tool.poetry]
name = "saba_first_api_onlinestore"
version = "0.1.0"
description = ""
authors = ["Moulay Driss EL ALAOUI FARIS <elalaouifaris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.6"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
